@@ -1,5 +1,7 @@
 2006-10-12  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* input/regression/lyric-tie.ly (texidoc): new file.
+
 	* Documentation/topdocs/NEWS.tely (Top): add new feature.
 
 	* lily/general-scheme.cc (LY_DEFINE): elucidate docstring.
